<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailUsers"
    tools:context=".detail.DetailUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="Ini adalah profile users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/showNama"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgUser"
        app:layout_constraintStart_toStartOf="@+id/imgUser"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"
        tools:text="Lorem Ipsum" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/TextUsername.Blue"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/showUsername"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/textFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textFollowing"
        app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
        app:layout_constraintStart_toStartOf="@+id/tvFollowing"
        app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />

    <TextView
        android:id="@+id/textFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textFollowers"
        app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
        app:layout_constraintStart_toStartOf="@+id/tvFollowers"
        app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

    <TextView
        android:id="@+id/textRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textRepository"
        app:layout_constraintEnd_toEndOf="@+id/tvRepository"
        app:layout_constraintStart_toStartOf="@+id/tvRepository"
        app:layout_constraintTop_toBottomOf="@+id/tvRepository" />

    <TextView
        android:id="@+id/tvFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/showFollowing"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/showFollowers"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvRepository"
        app:layout_constraintStart_toEndOf="@+id/tvFollowing"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:text="@string/showRepository"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/textCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/textCompany"
        app:layout_constraintStart_toEndOf="@+id/imgCompany"
        app:layout_constraintTop_toTopOf="@+id/imgCompany" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/textLocation"
        app:layout_constraintStart_toStartOf="@+id/tvCompany"
        app:layout_constraintTop_toTopOf="@+id/imgLocation" />

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_users_company"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgCompany"
        app:layout_constraintStart_toStartOf="@+id/textCompany"
        app:layout_constraintTop_toBottomOf="@+id/textCompany" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_users_location"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgLocation"
        app:layout_constraintStart_toStartOf="@+id/textLocation"
        app:layout_constraintTop_toBottomOf="@+id/textLocation" />

    <ImageView
        android:id="@+id/imgLocation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imgCompany"
        app:layout_constraintTop_toBottomOf="@+id/imgCompany"
        app:srcCompat="@drawable/location" />

    <ImageView
        android:id="@+id/imgCompany"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFollowing"
        app:srcCompat="@drawable/company" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="24dp"
            android:textOn=""
            android:textOff=""
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginBottom="380dp"
            android:text="@string/favorite_button"
            app:layout_constraintBottom_toTopOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent" />

<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            style="?android:attr/progressBarStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/rv_users"-->
<!--            app:layout_constraintStart_toStartOf="@+id/rv_users"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintTop_toTopOf="@+id/rv_users" />-->


</androidx.constraintlayout.widget.ConstraintLayout>